vendor/fatality/tests/ui/err-01.stderr
error[E0277]: `?` couldn't convert the error to `Kaboom`
  --> tests/ui/err-01.rs:39:12
   |
38 | fn iffy() -> Result<(), Kaboom> {
   |              ------------------ expected `Kaboom` because of this
39 |     Err(Fatal)?
   |               ^ the trait `From<Fatal>` is not implemented for `Kaboom`
   |
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
   = help: the following implementations were found:
             <Kaboom as From<Bobo>>
   = note: required because of the requirements on the impl of `FromResidual<Result<Infallible, Fatal>>` for `Result<(), Kaboom>`
